--- a/CarRentalSystem.Services.RccAPI/appsettings.json
+++ b/CarRentalSystem.Services.RccAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Connection": "Server=DESKTOP-JUTTIF4;Database=Rental;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
